--- a/appspec.yml
+++ b/appspec.yml
@@ -5,6 +5,6 @@ files:
     destination: /var/www/html/nexus-website
 hooks:
   AfterInstall:
-    - location: scripts/restart_server.sh
+    - location: home/ubuntu/scripts/restart_server.sh
       timeout: 300
       runas: root
