--- a/appspec.yml
+++ b/appspec.yml
@@ -1,10 +1,10 @@
 version: 0.0
 os: linux
 files:
-  - source: /
-    destination: /var/www/html/nexus-website
+  - source: /index.html
+    destination: /var/www/html/nexus-website/
 hooks:
   AfterInstall:
-    - location: /home/ubuntu/scripts/restart_server.sh
+    - location: scripts/restart_server.sh
       timeout: 300
       runas: root
