--- a/appspec.yml
+++ b/appspec.yml
@@ -1,10 +1,28 @@
 version: 0.0
 os: linux
 files:
-  - source: /index.html
+  - source: /nexus-website/
     destination: /var/www/html/nexus-website/
+permissions:
+  - object: /var/www/html/nexus-website/
+    pattern: "**"
+    owner: ubuntu
+    group: ubuntu
+    mode: 755
 hooks:
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: root
   AfterInstall:
-    - location: scripts/restart_server.sh
+    - location: scripts/after_install.sh
+      timeout: 300
+      runas: root
+  ApplicationStart:
+    - location: scripts/start_server.sh
+      timeout: 300
+      runas: root
+  ApplicationStop:
+    - location: scripts/stop_server.sh
       timeout: 300
       runas: root
