--- a/appspec.yml
+++ b/appspec.yml
@@ -19,10 +19,6 @@ hooks:
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: scripts/start_server.sh
-      timeout: 300
-      runas: root
-  ApplicationStop:
-    - location: scripts/stop_server.sh
+    - location: scripts/restart_server.sh
       timeout: 300
       runas: root
